Fix horizontal scroll-bar height

--- a/niord-web/src/main/webapp/css/admin.css
+++ b/niord-web/src/main/webapp/css/admin.css
@@ -350,6 +350,10 @@ div.ace_scrollbar.ace_scrollbar-v {
     width: auto!important;
 }
 
+div.ace_scrollbar.ace_scrollbar-h {
+    height: auto!important;
+}
+
 /** Mails admin page **/
 
 .scheduled-mails-filter {
